# xmpmeta

./: AUTHORS  CMakeLists.txt  CONTRIBUTING  README.md  xdmlib.gyp  xmpmeta.gyp
cmake/: AppendTargetProperty.cmake  FindGlog.cmake  FindLibxml.cmake  ReadXdmlibVersionFromSource.cmake  ReadXmpmetaVersionFromSource.cmake  UpdateCacheVariable.cmake  XdmlibConfig.cmake.in  XdmlibConfigVersion.cmake.in  XmpmetaConfig.cmake.in  XmpmetaConfigVersion.cmake.in  uninstall.cmake.in
includes/xdmlib/: audio.h  camera.h  camera_pose.h  cameras.h  device.h  device_pose.h  equirect_model.h  image.h  imaging_model.h  mesh.h  navigational_connectivity.h  point_cloud.h  profile.h  profiles.h  vendor_info.h  version.h
includes/xmpmeta/: gaudio.h  gimage.h  gpano.h  jpeg_io.h  md5.h  pano_meta_data.h  photo_sphere_writer.h  version.h  vr_photo_writer.h  xmp_const.h  xmp_data.h  xmp_parser.h  xmp_writer.h  xmpmeta.h
internal/xdmlib/: CMakeLists.txt  METADATA  README.md  audio.cc  audio_test.cc  camera.cc  camera_pose.cc  camera_pose_test.cc  camera_test.cc  cameras.cc  cameras_test.cc  const.cc  const.h  device.cc  device_pose.cc  device_pose_test.cc  device_test.cc  dimension.h  element.h  equirect_model.cc  equirect_model_test.cc  image.cc  image_test.cc  mesh.cc  mesh_test.cc  navigational_connectivity.cc  navigational_connectivity_test.cc  point.h  point_cloud.cc  point_cloud_test.cc  profile.cc  profile_test.cc  profiles.cc  profiles_test.cc  vendor_info.cc  vendor_info_test.cc
internal/xmpmeta/: CMakeLists.txt  base64.cc  base64.h  base64_test.cc  file.cc  file.h  gaudio.cc  gaudio_test.cc  gimage.cc  gimage_test.cc  gpano.cc  gpano_test.cc  jpeg_io.cc  jpeg_io_test.cc  md5.cc  md5_test.cc  photo_sphere_writer.cc  photo_sphere_writer_test.cc  test_util.cc  test_util.h  test_xmp_creator.cc  test_xmp_creator.h  vr_photo_writer.cc  vr_photo_writer_test.cc  xmp_const.cc  xmp_data.cc  xmp_parser.cc  xmp_parser_cli.cc  xmp_parser_fuzzer.cc  xmp_parser_test.cc  xmp_writer.cc  xmp_writer_cli.cc  xmp_writer_test.cc
internal/xmpmeta/xml/: const.cc  const.h  deserializer.h  deserializer_impl.cc  deserializer_impl.h  deserializer_impl_test.cc  search.cc  search.h  search_test.cc  serializer.h  serializer_impl.cc  serializer_impl.h  serializer_impl_test.cc  utils.cc  utils.h  utils_test.cc  xml.gyp
testdata/: photo_sphere_std_section_data.txt  vr_photo_no_audio_ext_section_data.txt  vr_photo_no_audio_std_section_data.txt  vr_photo_with_audio_ext_section_data.txt  vr_photo_with_audio_std_section_data.txt  xmp_writer_extended_section_data.txt  xmp_writer_standard_section_data.txt
testdata/xdm/: audio_testdata.txt  camera_pose_testdata_full.txt  camera_pose_testdata_orientation.txt  camera_pose_testdata_position.txt  camera_testdata.txt  camera_with_image_id_testdata.txt  cameras_testdata.txt  device_pose_testdata_full.txt  device_pose_testdata_orientation.txt  device_pose_testdata_position.txt  device_testdata.txt  device_testdata_posedcollection.xml  equirect_model_testdata.txt  image_testdata.txt  image_testdata_with_image_id.txt  mesh_testdata.txt  mesh_testdata_full.txt  navigational_connectivity_testdata.txt  point_cloud_testdata.txt  point_cloud_testdata_full.txt  profile_testdata.txt  profiles_testdata.txt  vendor_info_testdata.txt  vendor_info_testdata_full.txt
